Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-20 (SVN):
    * filenames.h: Added new macro DIR_SEPARATOR_STR, which is simply a
      string version of DIR_SEPARATOR_CHAR.

2012-06-20 (SVN):
    * utils/util_io.c (Q_getwd, PLATFORM_AMIGA): Don't return PROGDIR:

2012-06-20 (SVN):
    * sys_amiga.c (Sys_CopyFile): Restore the copied file's timestamp.

2012-06-19 (SVN):
    * h2patch.c: Use DIR_SEPARATOR_CHAR from filenames.h when building
      file names.

2012-06-19 (SVN):
    * filenames.h: define DIR_SEPARATOR_CHAR as '/' for djgpp.

2012-06-19 (SVN):
    * Moved sun sys/sockio.h include from net_udp.c to net_sys.h

2012-06-19 (SVN):
    * gl_vidnt.c: Made hInstGL static.

2012-06-19 (SVN):
    * rpm spec file: Updated, changed --without gtk2 to --with gtk1.

2012-06-19 (SVN):
    * launcher/gtk_ui.c: Use a format string with gtk_message_dialog_new

2012-06-18 (SVN):
    * snd_ahi.c: In case of failure, make sure that shm is NULL before
      returning. Also set shm and its buffer to NULL in shutdown().

2012-06-18 (SVN):
    * gl_vidnt.c: Fixed dynamic loading of glGetTexParameterfv().

2012-06-18 (SVN):
    * snd_vorbis.c: Set initialization success for MorphOS.

2012-06-18 (SVN):
    * Makefiles: Commented out GL_LINK setting for AROS, not needed

2012-06-18 (SVN):
    * opengl: Dynamically load glGetTexParameterfv at runtime and skip
      the anisotropy driver-lock status if loading fails.

2012-06-18 (SVN):
    * cd_sdl.c, gl_vidsdl.c: Disabled the putenv() calls on MorphOS.

2012-06-18 (SVN):
    * Makefiles: Removed the -fexpensive-optimizations flag, gcc seems
      to enable it at -O2 and higher. Removed the -falign-* flags, which
      aren't really necessary. Removed the OPT_EXTRA makefile option,
      moved the -fomit-frame-pointer flag among main optimization flags.
      Made the MorphOS builds to link to opengl library at compile time