@@ -26,7 +26,8 @@
 #include "arch_def.h"
 #if defined(PLATFORM_UNIX) ||		\
     defined(PLATFORM_AMIGA) ||		\
-    defined(__DJGPP__)
+    defined(__DJGPP__) ||		\
+    defined(PLATFORM_RISCOS)
 #include <sys/time.h>	/* struct timeval */
 #endif
 #include "net_sys.h"
